main/default/objects/ProposalElement__c/fields/Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Generated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures user generating the PDF and the Proposal Element</description>
    <label>Generated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProposalElements</relationshipName>
    <type>Lookup</type>
</CustomField>