main/default/objects/ProposalElement__c/fields/Integra_Contract__c.field-meta.xml
<CustomField>
    <fullName>Integra_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Integra Contract</label>
    <referenceTo>Integra_Contract__c</referenceTo>
    <relationshipName>ProposalElements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>