main/default/objects/ProposalElement__c/fields/Last_Generated_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Generated_On__c</fullName>
    <label>Last Generated On</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>