main/default/objects/ProposalElement__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>ProposalElements</relationshipLabel>
    <relationshipName>ProposalElements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>